Fixed settings font from bleeding fonts into all pages

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,8 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: #e9e9e9;
+  font-family: 'Raleway', sans-serif;
 
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
